Pull up revision 1.45 (requested by martin in ticket #663): Back out the "it is not completely clear" part of revision 1.37 - it effectively swapped RTS and DTR, apparently on all versions of the chip. This fixes PR kern/30685.